--- a/css/style.css
+++ b/css/style.css
@@ -6936,7 +6936,7 @@ p {
     ); */
   /* padding: 90px 0; */
   background: linear-gradient(rgb(0 0 0 / 68%), rgb(0 0 0 / 54%)),
-    url(../img/bg/fifo-bg.JPG) no-repeat center center / cover !important;
+    url(../img/bg/fifo-bg.jpg) no-repeat center center / cover !important;
 }
 
 .logo-widget {
